Bear in Mind Exceptions 0.0.1 library added

--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,7 @@
         <prettier-java.version>2.0.0</prettier-java.version>
         <aws-java-sdk.version>1.11.767</aws-java-sdk.version>
         <bear-in-mind-file-storage.version>0.0.1</bear-in-mind-file-storage.version>
+        <bear-in-mind-exceptions.version>0.0.1</bear-in-mind-exceptions.version>
     </properties>
 
     <dependencies>
@@ -75,6 +76,14 @@
             <version>${bear-in-mind-file-storage.version}</version>
         </dependency>
         <!-- FILE STORAGE -->
+
+        <!-- EXCEPTIONS -->
+        <dependency>
+            <groupId>com.kwezal.bearinmind</groupId>
+            <artifactId>bear-in-mind-exceptions</artifactId>
+            <version>${bear-in-mind-exceptions.version}</version>
+        </dependency>
+        <!-- EXCEPTIONS -->
 
     </dependencies>
 
